--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ender-repository"
   , "description": "Repository (npm) manager for the Ender CLI"
-  , "version": "0.0.1"
+  , "version": "0.0.2"
   , "authors": [
         "Rod Vagg @rvagg <rod@vagg.org> (https://github.com/rvagg)"
       , "Dustin Diaz @ded <dustin@obvious.com> (https://github.com/ded)"
@@ -11,9 +11,10 @@
   , "main": "./lib/index.js"
   , "homepage": "https://ender.jit.su"
   , "dependencies": {
-        "npm"          : "~1.1.70"
-      , "async"        : "~0.1.22"
-      , "errno"        : "~0.0.3"
+        "ender-package-util": "~0.0.0"
+      , "npm"               : "~1.1.70"
+      , "async"             : "~0.1.22"
+      , "errno"             : "~0.0.3"
     }
   , "devDependencies": {
         "buster"       : "~0.6.12"
