--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "Rod Vagg @rvagg <rod@vagg.org> (https://github.com/rvagg)"
       , "Dustin Diaz @ded <dustin@obvious.com> (https://github.com/ded)"
       , "Jacob Thornton @fat <jacob@twitter.com> (https://github.com/fat)"
+      , "Andrew McCollum (https://github.com/amccollum)"
     ]
   , "keywords": []
   , "main": "./lib/index.js"
