--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ender-repository"
   , "description": "Repository (npm) manager for the Ender CLI"
-  , "version": "0.0.4"
+  , "version": "0.0.5-dev"
   , "authors": [
         "Rod Vagg @rvagg <rod@vagg.org> (https://github.com/rvagg)"
       , "Dustin Diaz @ded <dustin@obvious.com> (https://github.com/ded)"
