--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "ender-repository"
   , "description": "Repository (npm) manager for the Ender CLI"
-  , "version": "0.0.5-dev"
+  , "version": "1.0.0"
   , "authors": [
         "Rod Vagg @rvagg <rod@vagg.org> (https://github.com/rvagg)"
-      , "Dustin Diaz @ded <dustin@obvious.com> (https://github.com/ded)"
-      , "Jacob Thornton @fat <jacob@twitter.com> (https://github.com/fat)"
+      , "Dustin Diaz @ded <dustin@dustindiaz.com.com> (https://github.com/ded)"
+      , "Jacob Thornton @fat <jacob@obvious.com> (https://github.com/fat)"
       , "Andrew McCollum (https://github.com/amccollum)"
     ]
   , "keywords": []
